# claw-mode

./: .gitignore  .memory.md  .replit  README.md  app.py  build_exe.bat  build_exe.sh  index.html  main.py  nexus.spec  nexus_launcher.py  pyproject.toml  replit.md  requirements.txt  run_bootstrap_direct.py  start.bat  start.sh  test_llm.py  test_llm_prompt.py  test_parse.py  test_worker.py
attached_assets/: Pasted--NEXUS-IDE-EXE-Builder-INFO-Creating-build-virtual-envi_1775444703468.txt
src/: agent.py  coffee-shop.html  llm.py  multi_agent.py  plans.py  project.config.json  query_engine.py  runtime.py  security.py  session_store.py  telegram_bot.py  toolbox.py  tools.py  ultraworker.py
static/css/: animations.css  components.css  extended.css  nexus.css  style.css
static/js/: agent.js  editor.js  files.js  git.js  keybindings.js  main.js  models.js  nexus.js  plans.js  terminal.js  tools.js  ui.js
templates/: index.html
