[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.3.0",
    "openai>=2.30.0",
    "psutil>=5.9.0",
    "psycopg2-binary>=2.9.11",
    "tiktoken>=0.7.0",
]
